# multiqueue

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  Doxyfile  License.txt  README.md  system_config.hpp.in  version.hpp.in
benchmark/: CMakeLists.txt  evaluate.sh  evaluate_c.sh  evaluate_id.sh  evaluate_ns.sh  evaluate_quality.cpp  evaluate_quality.py  heap.cpp  plot.r  plot2.r  plot_rank.r  quality.cpp  throughput.cpp  utils.hpp
benchmarks/: CMakeLists.txt  heap.cpp  knapsack.cpp  performance.cpp  shortest_path.cpp
benchmarks/micro_benchmarks/: CMakeLists.txt
cmake/: CICTestScript.cmake  FindNuma.cmake  multiqueueConfig.cmake.in  utils.cmake
examples/: CMakeLists.txt  example.cpp  simple.cpp
extra/: Dockerfile
include/multififo/: build_config.hpp  guarded_fifo.hpp  handle.hpp  multififo.hpp  queue_guard.hpp  ring_buffer.hpp  stick_random.hpp
include/multififo/selection_strategy/: perm.hpp  random.hpp  sticky.hpp  swapping.hpp
include/multiqueue/: addressable.hpp  buffer.hpp  buffered_pq.hpp  buffered_spq.hpp  build_config.hpp  config.hpp  configurations.hpp  default_configuration.hpp  defaults.hpp  deletion_buffer_mq.hpp  factory.hpp  guarded_pq.hpp  handle.hpp  heap.hpp  ins_del_buffer_mq.hpp  int_multiqueue.hpp  int_multiqueue_assigned.hpp  kv_pq.hpp  local_queue_mq.hpp  lockable_pq.hpp  merge_mq.hpp  multiqueue.hpp  multiqueue_impl.hpp  native_binary_heap.hpp  no_buffer_mq.hpp  no_buffer_pq.hpp  numa_aware_merge_mq.hpp  numa_aware_mq.hpp  numa_node_allocator.hpp  pq.hpp  pq_guard.hpp  relaxed_kv_multiqueue.hpp  relaxed_multiqueue.hpp  ring_buffer.hpp  sentinel.hpp  sentinel_traits.hpp  sm_deletion_buffer_mq.hpp  stat_counter.hpp  static_buffer.hpp  stats.hpp  (+14 more)
include/multiqueue/heap/: full_down_strategy.hpp  full_up_strategy.hpp  heap.hpp
include/multiqueue/modes/: random.hpp  stick_mark.hpp  stick_random.hpp  stick_random_shared.hpp  stick_swap.hpp  swap.hpp
include/multiqueue/operation_policy/: noop.hpp  parametric.hpp  random.hpp  stick_random.hpp
include/multiqueue/queue_selection/: global_permutation.hpp  no_sticking.hpp  random.hpp  stick_random.hpp  swap_assignment.hpp
include/multiqueue/selection_strategy/: perm.hpp  random.hpp  sticky.hpp  swapping.hpp
include/multiqueue/sequential/: kv_pq.hpp  pq.hpp
include/multiqueue/sequential/heap/: full_down_strategy.hpp  full_up_strategy.hpp  heap.hpp  merge_heap.hpp  native_binary_heap.hpp
include/multiqueue/stick_policies/: global_permutation.hpp  no_sticking.hpp  no_sticking_strict.hpp  random.hpp  random_strict.hpp  swapping.hpp  swapping_blocking.hpp  swapping_lazy.hpp
include/multiqueue/stick_policy/: none.hpp  noop.hpp  parametric.hpp  perm.hpp  random.hpp  swap.hpp  swapping.hpp
include/multiqueue/util/: allocator.hpp  buffer.hpp  conditional_value.hpp  default_iterator.hpp  extractors.hpp  inplace_merge.hpp  range_iterator.hpp  ring_buffer.hpp
micro_benchmarks/: CMakeLists.txt  heap.cpp
scripts/: benchmark_all.sh  benchmark_single.sh  benchmark_sssp.sh  benchmark_variants.sh  plot_quality.r
tests/: CMakeLists.txt  buffer.cpp  buffered_pq.cpp  consistency.cpp  evaluate_quality.cpp  generic.cpp  heap.cpp  kv_pq_api.cpp  kv_pq_correctness.cpp  merge_heap.cpp  multiqueue.cpp  no_buffer_pq.cpp  performance.cpp  pq_api.cpp  pq_correctness.cpp  ring_buffer.cpp  test_types.hpp  utils.hpp  verify.cpp  verify_consistency.cpp  wrapper.cpp
tests/benchmark/: CMakeLists.txt  evaluate.sh  heap.cpp  prepare_scenario.sh  quality.cpp  shortest_path.cpp  start_all.sh  throughput.cpp
tests/unit_tests/: CMakeLists.txt  kv_pq_api.cpp  kv_pq_correctness.cpp  main.cpp  no_buffer_pq.cpp  pq_api.cpp  pq_correctness.cpp  replay_tree.cpp  ring_buffer.cpp  utils.hpp
tests/utils/: cartesian_product_type.hpp  priority_queue_factory.hpp  threading.hpp
tests/wrapper/: CMakeLists.txt  capq.cpp  capq.hpp  dlsm.hpp  klsm.hpp  linden.cpp  linden.hpp  spraylist.cpp  spraylist.hpp
tools/: Dockerfile  plot.r
unit_tests/: CMakeLists.txt  buffer.cpp  definitions.hpp  heap.cpp  kv_pq_api.cpp  kv_pq_correctness.cpp  merge_heap.cpp  no_buffer_pq.cpp  pq_api.cpp  pq_correctness.cpp  ring_buffer.cpp
utils/: CMakeLists.txt  evaluate_quality.cpp  inserter.hpp  key_generator.hpp  priority_queue_factory.hpp  replay_tree.hpp  select_queue.hpp  sequential_shortest_path.cpp  thread_coordination.hpp  threading.cpp  threading.hpp
wrapper/: CMakeLists.txt  capq.cpp  capq.hpp  dlsm.hpp  klsm.hpp  linden.cpp  linden.hpp  spraylist.cpp  spraylist.hpp
