add_executable(benchmarks heap.cpp)
target_link_libraries(benchmarks PRIVATE multiqueue_internal Threads::Threads Catch2::Catch2WithMain)
target_compile_definitions(benchmarks PRIVATE CATCH_CONFIG_ENABLE_BENCHMARKING)
if (Boost_FOUND)
target_link_libraries(benchmarks PRIVATE Boost::boost)
  target_compile_definitions(benchmarks PRIVATE HAVE_BOOST)
endif()
target_compile_options(benchmarks PRIVATE $<$<CONFIG:Release>:-march=native>)
if(CMAKE_COMPILER_IS_GNUCXX)
  target_link_options(benchmarks PRIVATE $<$<CONFIG:Release>:-flto>)
endif()
